// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentMagazine Styles should render additional info not opened (not visible) 1`] = `
<div
  className="CurrentMagazinestyles__CurrentMagazineAdditionalInfo-hgzQrm gPoigL"
/>
`;

exports[`CurrentMagazine Styles should render additional info opened (visible) 1`] = `
<div
  className="CurrentMagazinestyles__CurrentMagazineAdditionalInfo-hgzQrm IUMvp"
/>
`;
